--- a/package.json
+++ b/package.json
@@ -3,10 +3,29 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx watch src/server.ts",
+    "start": "ts-node src/server.ts",
+    "prisma:migrate": "prisma migrate deploy",
+    "prisma:generate": "prisma generate"
+  },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express-fileupload": "^1.5.0",
     "@types/node": "^20.14.11",
     "prisma": "^5.17.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.17.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-fileupload": "^1.5.1",
+    "mongoose": "^8.5.1",
+    "tsx": "^4.16.2"
   }
 }
