--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch src/server.ts",
     "start": "ts-node src/server.ts",
-    "prisma:migrate": "prisma migrate deploy",
+    "push": "prisma db push",
     "prisma:generate": "prisma generate"
   },
   "devDependencies": {
