--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.19.2",
     "express-fileupload": "^1.5.1",
     "mongoose": "^8.5.1",
-    "tsx": "^4.16.2"
+    "tsx": "^4.16.2",
+    "zod": "^3.23.8"
   }
 }
