--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "prisma:generate": "prisma generate"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express-fileupload": "^1.5.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.11",
     "prisma": "^5.17.0",
     "ts-node": "^10.9.2",
@@ -21,11 +23,13 @@
   },
   "dependencies": {
     "@prisma/client": "^5.17.0",
+    "bcrypt": "^5.1.1",
     "cloudinary": "^2.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "tsx": "^4.16.2",
     "zod": "^3.23.8"
