--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch src/server.ts",
-    "start": "ts-node src/server.ts",
+    "start": "node -r tsconfig-paths/register build/server.js",
     "push": "prisma db push",
     "prisma:generate": "prisma generate",
     "studio": "npx prisma studio"
@@ -32,6 +32,7 @@
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
+    "tsconfig-paths": "^4.2.0",
     "tsx": "^4.16.2",
     "zod": "^3.23.8"
   }
