--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
+    "resend": "^4.7.0",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.16.2",
     "zod": "^3.23.8"
