--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "node -r tsconfig-paths/register build/server.js",
     "push": "prisma db push",
     "prisma:generate": "prisma generate",
-    "studio": "npx prisma studio"
+    "studio": "npx prisma studio",
+    "seed:home": "tsx prisma/seed/home-seed.ts"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -32,6 +33,8 @@
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "resend": "^4.7.0",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.16.2",
