feat: add seed scripts and update About model
- Add home-seed.ts with Cloudinary image upload
- Add about-seed.ts with birthDate field
- Add curriculum-seed.ts with base64 document storage
- Add experience-seed.ts with professional experiences
- Add education-seed.ts with graduation records
- Change About model: replace 'age' (Int) with 'birthDate' (DateTime)
- Add calculateAge function to about-service for dynamic age calculation
- Add seed scripts to package.json (seed:home, seed:about, seed:curriculum, seed:experience, seed:education)

--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "push": "prisma db push",
     "prisma:generate": "prisma generate",
     "studio": "npx prisma studio",
-    "seed:home": "tsx prisma/seed/home-seed.ts"
+    "seed:home": "tsx prisma/seed/home-seed.ts",
+    "seed:about": "tsx prisma/seed/about-seed.ts",
+    "seed:curriculum": "tsx prisma/seed/curriculum-seed.ts",
+    "seed:experience": "tsx prisma/seed/experience-seed.ts",
+    "seed:education": "tsx prisma/seed/education-seed.ts"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
