feat: add skill seed and refactor skill types
- Add skill-seed.ts with 36 skills and competences
- Add seed:skill script to package.json
- Constrain SkillType to 'skill' | 'competence'
- Constrain SkillLevel to 1-5

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "seed:about": "tsx prisma/seed/about-seed.ts",
     "seed:curriculum": "tsx prisma/seed/curriculum-seed.ts",
     "seed:experience": "tsx prisma/seed/experience-seed.ts",
-    "seed:education": "tsx prisma/seed/education-seed.ts"
+    "seed:education": "tsx prisma/seed/education-seed.ts",
+    "seed:skill": "tsx prisma/seed/skill-seed.ts"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
