--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "seed:curriculum": "tsx prisma/seed/curriculum-seed.ts",
     "seed:experience": "tsx prisma/seed/experience-seed.ts",
     "seed:education": "tsx prisma/seed/education-seed.ts",
-    "seed:skill": "tsx prisma/seed/skill-seed.ts"
+    "seed:skill": "tsx prisma/seed/skill-seed.ts",
+    "seed:project": "tsx prisma/seed/project-seed.ts"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
