feat: add project and social-media seeds
- Add project-seed.ts with Cloudinary upload and skill linking
- Add social-media-seed.ts with 5 social networks (WhatsApp, Instagram, Email, LinkedIn, GitHub)
- Add seed:project and seed:social-media scripts to package.json

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "seed:experience": "tsx prisma/seed/experience-seed.ts",
     "seed:education": "tsx prisma/seed/education-seed.ts",
     "seed:skill": "tsx prisma/seed/skill-seed.ts",
-    "seed:project": "tsx prisma/seed/project-seed.ts"
+    "seed:project": "tsx prisma/seed/project-seed.ts",
+    "seed:social-media": "tsx prisma/seed/social-media-seed.ts"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
