refactor: update About and Experience models, controllers, and validations
- Change About model to use optional birthDate instead of age
- Update Experience model to include optional fields for yearFinal, mothFinal, currentJob, modality, and description
- Refactor AboutController and ExperienceController to handle new data structures
- Modify validation schemas for About and Experience to reflect changes in models
- Enhance HomeController to support mainSkills in create and update operations
- Adjust skill validation to allow name with a minimum length of 1

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "tsx watch src/server.ts",
     "start": "node -r tsconfig-paths/register build/server.js",
     "push": "prisma db push",
-    "prisma:generate": "prisma generate",
+    "generate": "prisma generate",
     "studio": "npx prisma studio",
     "seed:home": "tsx prisma/seed/home-seed.ts",
     "seed:about": "tsx prisma/seed/about-seed.ts",
